--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,320 @@
 /* место для вашего кода */
+body {
+	display: grid;
+	grid-template-rows: auto;
+	padding: 92px 0 88px;
+	font: 20px Raleway, Arial, sans-serif;
+}
+
+.header {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	column-gap: 35px; /* для pixel-perfect */
+	padding: 0 50px 96px;
+	font-size: 18px;
+	letter-spacing: .3px;
+}
+
+.header__menu {
+	align-self: center;
+}
+
+.header__links-list {
+	display: inline-flex;
+	justify-content: space-between;
+	width: 392px;
+}
+
+.header__links-list-item {
+	display: inline-block;
+}
+
+.header__link {
+	display: list-item;
+	border-bottom: 1px black solid;
+	text-decoration: none;
+	text-transform: lowercase;
+	list-style: circle;
+}
+
+.header__link.active {
+	border: none;
+	letter-spacing: 0;
+	text-decoration: none;
+	list-style: none;
+}
+
+.header__logo-image {
+	width: 148px;
+	height: 105px;
+}
+
+.header__address {
+	display: grid;
+	align-self: center;
+	width: 240px;
+	margin-left: 30px;
+}
+
+.address {
+	display: inline-block;
+	font-style: normal;
+	line-height: 24.3px;
+}
+
+.address a {
+	border-bottom: 1px black solid;
+	letter-spacing: 0.01em;
+	text-decoration: none;
+}
+
+.welcome-section {
+	position: relative;
+	padding-bottom: 50px;
+	color: #fff;
+	text-transform: uppercase;
+	background-image: url(../images/cover.jpg);
+	background-position: center;
+	background-size: cover;
+}
+
+.overlay {
+	position: absolute;
+	z-index: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0, 0, .6);
+}
+
+.h1 { 
+	display: flex;
+	flex-direction: column;
+	row-gap: 20px;
+	padding: 165px 50px 135px;
+}
+
+.ono, .tebe, .nado {
+	display: flex;
+	font-weight: bold;
+	font-size: 100px;
+	letter-spacing: .3em;
+}
+
+.ono {
+	line-height: 1.15em;
+}
+
+.ono span, .tebe span, .nado span {
+	letter-spacing: .6em;
+}
+
+.tebe {
+	
+	position: relative; /* для pixel perfect. Почему-то в макете  слово "тебе" стоит
+											не совсем по центру */
+	left: -14px;
+	justify-content: center;
+	line-height: 1em;
+}
+
+.nado {
+	justify-content: end;
+	line-height: 1em;
+}
+
+.nado span + span {
+	letter-spacing: 0;
+}
+
+.h1 span, .welcome-section__p, button, .lot-title, .lot p {
+	z-index: 1;
+}
+
+.welcome-section .wrapper {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 50px 0 78px;
+	font-size: 22px;
+}
+
+.welcome-section__p {
+	line-height: 28px;
+	word-spacing: .84em;
+}
+
+.button {
+	border: 1px #fff solid;
+	padding: 12px 32px;
+	color: #fff;
+	font-size: 22px;
+	text-transform: uppercase;
+	background-color: transparent;
+}
+
+.lots {
+	padding: 179px 24px 132px;
+}
+
+.h2 {
+	font-weight: bold;
+	font-size: 40px;
+	text-transform: uppercase;
+}
+
+.lots .h2 {
+	margin: 0 0 27px 40px;
+}
+
+.lots-list {
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: 25px;
+	list-style: none;
+}
+
+.lots-list__item {
+	flex-grow: 1;
+	width: 334px;
+	min-height: 563px;
+}
+
+.lots-list__link {
+	position: relative;
+	text-decoration: none;
+}
+
+.lot {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 334px; /* продублировал, т.к. использую этот класс для логотипа в секции 
+									 about (как просят в брифе), иначе он немного съезжает */
+	min-height: 563px;
+	padding: 51px 40px 48px;
+	color: #fff;
+}
+
+.lot-title {
+	font-size: 22px;
+	line-height: 1.2em;
+	text-decoration: underline;
+	text-decoration-thickness: 1px;
+	text-underline-offset: 3px;
+	text-transform: uppercase;
+}
+
+.lot-title + p {
+	line-height: 1.2em;
+}
+
+.lot.card_type_film {
+	background-image: url(../images/card-lot-01.jpg);
+}
+
+.lot.card_type_book {
+	background-image: url(../images/card-lot-02.jpg);
+}
+
+.lot.card_type_picture {
+	background-image: url(../images/card-lot-03.jpg);
+}
+
+.lot.card_type_film, .lot.card_type_book, .lot.card_type_picture {
+	background-position: center;
+	background-size: cover;
+}
+
+.lots__look-more-link {
+	display: inline-block;
+	margin: 30px 0 0 40px;
+	border-bottom: 1px solid black;
+	text-decoration: none;
+	text-transform: lowercase;
+}
+
+.about {
+	display: flex;
+	justify-content: end;
+	column-gap: 25px;
+	padding: 0 24px 184px;
+}
+
+.about-logo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	align-self: center;
+	width: 240px;
+	height: 240px;
+	border-radius: 120px;
+	background: #000;
+
+}
+
+.about-logo-image {
+	z-index: 1;
+	width: 141.5px;
+	height: 112.5px;
+	margin: auto;
+}
+
+.about .wrapper {
+	display: flex;
+	flex-direction: column;
+	row-gap: 100px;
+	align-self: end;
+	max-width: 693px;
+	margin-top: 148px;
+}
+
+.about__text-wrapper {
+	display: flex;
+	flex-direction: column;
+	row-gap: 22px;
+}
+
+.about__text {
+	line-height: 24px;
+}
+
+.footer {
+	display: flex;
+	justify-content: space-between;
+	padding: 0 50px;
+	font-size: 18px;
+}
+
+.footer__menu-list {
+	position: relative; /* pixel perfect */
+	left: 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	list-style: none;
+}
+
+.footer__menu-link {
+	border-bottom: 1px solid black;
+	text-decoration: none;
+	text-transform: lowercase;
+}
+
+.footer__menu-link.active {
+	border: none;
+}
+
+.footer__social-list {
+	display: flex;
+	column-gap: 48px;
+	list-style: none;
+}
+
+.footer__social-link {
+	text-decoration: none;
+}
+
+.footer__social-icon {
+	width: 48px;
+	height: 48px;
+}
