--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,21 @@ body {
 	padding: 165px 50px 135px;
 }
 
-.text-align-left, .text-align-center, .text-align-right {
+.text-align-left {
+	display: flex;
+	font-weight: bold;
+	font-size: 100px;
+	letter-spacing: .3em;
+}
+
+.text-align-center {
+	display: flex;
+	font-weight: bold;
+	font-size: 100px;
+	letter-spacing: .3em;
+}
+
+.text-align-right {
 	display: flex;
 	font-weight: bold;
 	font-size: 100px;
@@ -102,7 +116,15 @@ body {
 	line-height: 1.15em;
 }
 
-.text-align-left span, .text-align-center span, .text-align-right span {
+.text-align-left span {
+	letter-spacing: .6em;
+}
+
+.text-align-center span {
+	letter-spacing: .6em;
+}
+
+.text-align-right span {
 	letter-spacing: .6em;
 }
 
@@ -121,7 +143,23 @@ body {
 	letter-spacing: 0;
 }
 
-.h1 > span, .welcome-section__p, .button, .lot-title, .lot p {
+.h1 > span {
+	z-index: 1;
+}
+
+.welcome-section__p {
+	z-index: 1;
+}
+
+.button {
+	z-index: 1;
+}
+
+.lot-title {
+	z-index: 1;
+}
+
+.lot p {
 	z-index: 1;
 }
 
@@ -215,7 +253,17 @@ body {
 	background: url(../images/card-lot-03.jpg);
 }
 
-.lot.card_type_film, .lot.card_type_book, .lot.card_type_picture {
+.lot.card_type_film {
+	background-position: center;
+	background-size: cover;
+}
+
+.lot.card_type_book {
+	background-position: center;
+	background-size: cover;
+}
+
+.lot.card_type_picture {
 	background-position: center;
 	background-size: cover;
 }
